--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ h2.title {
     padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header, .finish .finish_header {
+.waiting .waiting_header, .finish .finish_header, .first .first_header {
     color: #252525;
     font-family: Roboto;
     font-size: 30px;
@@ -241,17 +241,15 @@ h2.title {
     text-align: center;
 }
 .gift {
+    padding: 86px 0 87px 0;
     min-height: 628px;
     background-color: #efefef;
 }
-.gift .gift_wrapper {
-    padding: 86px 0 87px 0;
-}
-.gift .gift_wrapper .gift_img {
+.gift .gift_img {
     display: block;
     margin: 0 auto;
 }
-.gift .gift_wrapper .gift_text {
+.gift .gift_text {
     margin-top: 42px;
     color: #252525;
     font-family: Roboto;
@@ -260,7 +258,7 @@ h2.title {
     line-height: 43px;
     text-align: center;
 }
-.gift .gift_wrapper .gift_btn {
+.gift .gift_btn {
     display: block;
     margin: 0 auto;
     margin-top: 52px;
@@ -278,4 +276,58 @@ h2.title {
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
+}
+.first {
+    min-height: 515px;
+    padding: 89px 0 64px 0;
+}
+.first .first_img {
+    display: block;
+    margin: 0 auto;
+}
+.first .first_header {
+    margin-top: 37px;
+}
+.first .first_title {
+    margin-top: 30px;
+    text-align: center;
+    color: #299cbd;
+    font-family: "Roboto - Black";
+    font-size: 36px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+.first .first_text {
+    margin-top: 25px;
+    text-align: center;
+    color: #4a4a4a;
+    font-family: Roboto;
+    font-size: 23px;
+    font-weight: 400;
+}
+footer {
+    padding: 61px 0 69px 0;
+    min-height: 166px;
+    background-color: #1a1a1a;
+}
+.info {
+    margin: 0 auto;
+    width: 377px;
+    text-align: center;
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+}
+footer a {
+    color: #888888;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 21px;
+    text-decoration: none;
+}
+.footer_link {
+    text-decoration: underline;
 }
