--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -4,15 +4,38 @@
     margin-top: 52px;
     width: 313px;
     height: 72px;
-    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
-    border: 4px solid rgba(0, 0, 0, 0.23);
-    background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
-    text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
-    color: #ffffff;
+    background-color: #2798b9;
+    color: #fff;
+    border: none;
+    border-radius: 2px;
     font-family: "Roboto Condensed";
     font-size: 21px;
     line-height: 24px;
     text-transform: uppercase;
     cursor: pointer;
     outline: none;
+    &:hover {
+        background-color: #1b6b83;
+    }
+}
+
+@mixin form-btn {
+    display: block;
+    margin: 0 auto;
+    margin-top: 35px;
+    width: 220px;
+    height: 55px;
+    background-color: #2798b9;
+    color: #fff;
+    border: none;
+    border-radius: 2px;
+    font-family: "Roboto Condensed";
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+    &:hover {
+        background-color: #1b6b83;
+    }
 }
