--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -277,3 +277,112 @@ footer {
 	}
 	
 }
+.overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(0,0,0, 0.56);
+    display: none;
+}
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 38px 40px 40px 40px;
+    width: 380px;
+    min-height: 400px;
+    background-color: #f2f2f2;
+    &__close {
+        position: absolute;
+        top: 0;
+        right: -40px;
+        color: #F9BF3B;
+        font-size: 41px;
+        line-height: 21px;
+        cursor: pointer;
+    }
+    &__subtitle {
+        color: #0d0d0d;
+        font-size: 18px;
+        font-weight: 700;
+        text-align: center;
+    }
+    &__descr {
+        color: #0d0d0d;
+        font-size: 14px;
+        font-weight: 500;
+        text-align: center;
+    }
+    &_mini {
+        min-height: 140px;
+    }
+    &__spinner {
+        margin-top: 15px;
+    }
+}
+
+#consultation, #order, #thanks {
+    display: none;
+}
+
+.feed-form {
+    margin-top: 36px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    input {
+        height: 50px;
+        border-radius: 5px;
+        background-color: #ffffff;
+        margin-bottom: 15px;
+        border: none;
+        padding: 0 20px;
+        color: #4b4b4b;
+        font-size: 14px;
+        font-weight: 300;
+        &:nth-child(3) {
+            margin-bottom: 20px;
+        }
+    }
+    &_mt25 {
+        margin-top: 25px;
+	}
+	button {
+		@include form-btn;
+	}
+    .attantionMessage {
+        font-size: 12px;
+        text-align: center;
+        margin-bottom: 20px;
+        color: red;
+    }
+    .status {
+        font-size: 15px;
+        margin: 15px auto;
+        color: red;
+        &_white {
+            font-size: 15px;
+            margin: 15px auto;
+            color: #ffffff;
+        }
+    }
+}
+
+.pageup {
+    display: none;
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+    width: 45px;
+    height: 45px;
+    opacity: 1;
+    transition: all .7s;
+    img {
+        width: 100%;
+    }
+    &:hover {
+        transform: scale(1.1);
+    }
+}
